// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flushable-import existing chunkName: existing chunkName 1`] = `

import(/* webpackChunkName: 'Bar' */"./Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Bar' */
        "./Foo"
      ),
    ]).then((proms) => proms[0]),
});


`;

exports[`flushable-import multiple imports: multiple imports 1`] = `

import("one"); import("two"); import("three");

      ↓ ↓ ↓ ↓ ↓ ↓

import _flushableImport3 from "@vpukhanov/babel-plugin-flushable-import/flushable-import";
import _flushableImport2 from "@vpukhanov/babel-plugin-flushable-import/flushable-import";
import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'one' */
        "one"
      ),
    ]).then((proms) => proms[0]),
});

_flushableImport2({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'two' */
        "two"
      ),
    ]).then((proms) => proms[0]),
});

_flushableImport3({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'three' */
        "three"
      ),
    ]).then((proms) => proms[0]),
});


`;

exports[`flushable-import static import (with file extension): static import (with file extension) 1`] = `

import("./Foo.js")

      ↓ ↓ ↓ ↓ ↓ ↓

import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "./Foo.js"
      ),
    ]).then((proms) => proms[0]),
});


`;

exports[`flushable-import static import (with relative paths): static import (with relative paths) 1`] = `

import("../../Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "../../Foo"
      ),
    ]).then((proms) => proms[0]),
});


`;

exports[`flushable-import static import: static import 1`] = `

import("./Foo")

      ↓ ↓ ↓ ↓ ↓ ↓

import _flushableImport from "@vpukhanov/babel-plugin-flushable-import/flushable-import";

_flushableImport({
  load: () =>
    Promise.all([
      import(
        /* webpackChunkName: 'Foo' */
        "./Foo"
      ),
    ]).then((proms) => proms[0]),
});


`;
